We now format UI messages consistently with formatted().